Review project.clj and a prep a list of DFQs.